--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,7 @@ pandas>=1.5.0
 # Tree-sitter for C# parsing
 tree-sitter>=0.20.0
 tree-sitter-c-sharp>=0.20.0
+
+#openai for LLM access
+openai>=1.0.0
+
