--- a/.gitignore
+++ b/.gitignore
@@ -1,312 +1,318 @@
-# ND-RAG C# VR System .gitignore
+# # ND-RAG C# VR System .gitignore
 
-# =============================================================================
-# Environment and Configuration Files
-# =============================================================================
-# Environment variables (contains sensitive data like API tokens)
+# # =============================================================================
+# # Environment and Configuration Files
+# # =============================================================================
+# # Environment variables (contains sensitive data like API tokens)
 .env
-.env.local
-.env.production
-.env.staging
+# .env.local
+# .env.production
+# .env.staging
+env_example.txt
 
-# =============================================================================
-# Data and Generated Files
-# =============================================================================
-# Cloned repositories (can be very large)
-data/repos/
-data/repos/*/
+# # =============================================================================
+# # Data and Generated Files
+# # =============================================================================
+# # Cloned repositories (can be very large)
+# data/repos/
+# data/repos/*/
 
-# Extracted method-test pairs
-data/pairs/
-data/pairs/*.json
+# # Extracted method-test pairs
+# data/pairs/
+# data/pairs/*.json
 
-# Embeddings and FAISS index
-data/embeddings/
-data/embeddings/*.npy
-data/embeddings/*.index
-data/embeddings/*.json
+# # Embeddings and FAISS index
+# data/embeddings/
+# data/embeddings/*.npy
+# data/embeddings/*.index
+# data/embeddings/*.json
 
-# Log files
+# # Log files
 *.log
-logs/
-nd_rag.log
+# logs/
+# nd_rag.log
 
-# =============================================================================
-# Python
-# =============================================================================
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+# # =============================================================================
+# # Python
+# # =============================================================================
+# # Byte-compiled / optimized / DLL files
+# __pycache__/
+# *.py[cod]
+# *$py.class
 
-# C extensions
-*.so
+# # C extensions
+# *.so
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+# # Distribution / packaging
+# .Python
+# build/
+# develop-eggs/
+# dist/
+# downloads/
+# eggs/
+# .eggs/
+# lib/
+# lib64/
+# parts/
+# sdist/
+# var/
+# wheels/
+# pip-wheel-metadata/
+# share/python-wheels/
+# *.egg-info/
+# .installed.cfg
+# *.egg
+# MANIFEST
 
-# PyInstaller
-*.manifest
-*.spec
+# # PyInstaller
+# *.manifest
+# *.spec
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# # Installer logs
+# pip-log.txt
+# pip-delete-this-directory.txt
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
+# # Unit test / coverage reports
+# htmlcov/
+# .tox/
+# .nox/
+# .coverage
+# .coverage.*
+# .cache
+# nosetests.xml
+# coverage.xml
+# *.cover
+# *.py,cover
+# .hypothesis/
+# .pytest_cache/
 
-# Translations
-*.mo
-*.pot
+# # Translations
+# *.mo
+# *.pot
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+# # Django stuff:
+# *.log
+# local_settings.py
+# db.sqlite3
+# db.sqlite3-journal
 
-# Flask stuff:
-instance/
-.webassets-cache
+# # Flask stuff:
+# instance/
+# .webassets-cache
 
-# Scrapy stuff:
-.scrapy
+# # Scrapy stuff:
+# .scrapy
 
-# Sphinx documentation
-docs/_build/
+# # Sphinx documentation
+# docs/_build/
 
-# PyBuilder
-target/
+# # PyBuilder
+# target/
 
-# Jupyter Notebook
-.ipynb_checkpoints
+# # Jupyter Notebook
+# .ipynb_checkpoints
 
-# IPython
-profile_default/
-ipython_config.py
+# # IPython
+# profile_default/
+# ipython_config.py
 
-# pyenv
-.python-version
+# # pyenv
+# .python-version
 
-# pipenv
-Pipfile.lock
+# # pipenv
+# Pipfile.lock
 
-# PEP 582
-__pypackages__/
+# # PEP 582
+# __pypackages__/
 
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
+# # Celery stuff
+# celerybeat-schedule
+# celerybeat.pid
 
-# SageMath parsed files
-*.sage.py
+# # SageMath parsed files
+# *.sage.py
 
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+# # Environments
+# .env
+# .venv
+# env/
+# venv/
+# ENV/
+# env.bak/
+# venv.bak/
 
-# Spyder project settings
-.spyderproject
-.spyproject
+# # Spyder project settings
+# .spyderproject
+# .spyproject
 
-# Rope project settings
-.ropeproject
+# # Rope project settings
+# .ropeproject
 
-# mkdocs documentation
-/site
+# # mkdocs documentation
+# /site
 
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
+# # mypy
+# .mypy_cache/
+# .dmypy.json
+# dmypy.json
 
-# Pyre type checker
-.pyre/
+# # Pyre type checker
+# .pyre/
 
-# =============================================================================
-# IDE and Editor Files
-# =============================================================================
-# Visual Studio Code
-.vscode/
-*.code-workspace
+# # =============================================================================
+# # IDE and Editor Files
+# # =============================================================================
+# # Visual Studio Code
+# .vscode/
+# *.code-workspace
 
-# PyCharm
-.idea/
-*.iml
-*.ipr
-*.iws
+# # PyCharm
+# .idea/
+# *.iml
+# *.ipr
+# *.iws
 
-# Sublime Text
-*.sublime-project
-*.sublime-workspace
+# # Sublime Text
+# *.sublime-project
+# *.sublime-workspace
 
-# Vim
-*.swp
-*.swo
-*~
+# # Vim
+# *.swp
+# *.swo
+# *~
 
-# Emacs
-*~
-\#*\#
-/.emacs.desktop
-/.emacs.desktop.lock
-*.elc
-auto-save-list
-tramp
-.\#*
+# # Emacs
+# *~
+# \#*\#
+# /.emacs.desktop
+# /.emacs.desktop.lock
+# *.elc
+# auto-save-list
+# tramp
+# .\#*
 
-# =============================================================================
-# OS Generated Files
-# =============================================================================
-# macOS
-.DS_Store
-.AppleDouble
-.LSOverride
-Icon
-._*
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# # =============================================================================
+# # OS Generated Files
+# # =============================================================================
+# # macOS
+# .DS_Store
+# .AppleDouble
+# .LSOverride
+# Icon
+# ._*
+# .DocumentRevisions-V100
+# .fseventsd
+# .Spotlight-V100
+# .TemporaryItems
+# .Trashes
+# .VolumeIcon.icns
+# .com.apple.timemachine.donotpresent
+# .AppleDB
+# .AppleDesktop
+# Network Trash Folder
+# Temporary Items
+# .apdisk
 
-# Windows
-Thumbs.db
-Thumbs.db:encryptable
-ehthumbs.db
-ehthumbs_vista.db
-*.tmp
-*.temp
-Desktop.ini
-$RECYCLE.BIN/
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-*.lnk
+# # Windows
+# Thumbs.db
+# Thumbs.db:encryptable
+# ehthumbs.db
+# ehthumbs_vista.db
+# *.tmp
+# *.temp
+# Desktop.ini
+# $RECYCLE.BIN/
+# *.cab
+# *.msi
+# *.msix
+# *.msm
+# *.msp
+# *.lnk
 
-# Linux
-*~
-.fuse_hidden*
-.directory
-.Trash-*
-.nfs*
+# # Linux
+# *~
+# .fuse_hidden*
+# .directory
+# .Trash-*
+# .nfs*
 
-# =============================================================================
-# Project Specific
-# =============================================================================
-# Large VR project files
-*.unitypackage
-*.uproject
-*.uplugin
-*.vrcx
-*.vrcw
+# # =============================================================================
+# # Project Specific
+# # =============================================================================
+# # Large VR project files
+# *.unitypackage
+# *.uproject
+# *.uplugin
+# *.vrcx
+# *.vrcw
 
-# Unity specific
-Library/
-Temp/
-Logs/
-UserSettings/
-obj/
-*.csproj
-*.unityproj
-*.sln
-*.suo
-*.tmp
-*.user
-*.userprefs
-*.pidb
-*.booproj
-*.svd
-*.pdb
-*.mdb
-*.opendb
-*.VC.db
+# # Unity specific
+# Library/
+# Temp/
+# Logs/
+# UserSettings/
+# obj/
+# *.csproj
+# *.unityproj
+# *.sln
+# *.suo
+# *.tmp
+# *.user
+# *.userprefs
+# *.pidb
+# *.booproj
+# *.svd
+# *.pdb
+# *.mdb
+# *.opendb
+# *.VC.db
 
-# Unreal specific
-Binaries/
-DerivedDataCache/
-Intermediate/
-Saved/
-.vscode/
-*.VC.db
-*.opendb
-*.VC.opendb
+# # Unreal specific
+# Binaries/
+# DerivedDataCache/
+# Intermediate/
+# Saved/
+# .vscode/
+# *.VC.db
+# *.opendb
+# *.VC.opendb
 
-# =============================================================================
-# Temporary and Cache Files
-# =============================================================================
-# Temporary files
-*.tmp
-*.temp
-*.bak
-*.backup
-*.old
-*.orig
+# # =============================================================================
+# # Temporary and Cache Files
+# # =============================================================================
+# # Temporary files
+# *.tmp
+# *.temp
+# *.bak
+# *.backup
+# *.old
+# *.orig
 
-# Cache files
-.cache/
-cache/
-*.cache
+# # Cache files
+# .cache/
+# cache/
+# *.cache
 
-# =============================================================================
-# Security
-# =============================================================================
-# API keys and secrets
-secrets.json
-config.json
-credentials.json
-*.key
-*.pem
-*.p12
-*.pfx
+# # =============================================================================
+# # Security
+# # =============================================================================
+# # API keys and secrets
+# secrets.json
+# config.json
+# credentials.json
+# *.key
+# *.pem
+# *.p12
+# *.pfx
 
-# =============================================================================
-# Documentation Build
-# =============================================================================
-docs/_build/
-docs/build/
-site/ 
+# # =============================================================================
+# # Documentation Build
+# # =============================================================================
+# docs/_build/
+# docs/build/
+# site/
+
+# # =============================================================================
+# # Documentation Files
+# # =============================================================================
+*.md
